--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.servlet.context-path=/api
-spring.rabbitmq.username=mqadmin
-spring.rabbitmq.password=abdcf123
-spring.rabbitmq.host=3.129.149.69
+spring.rabbitmq.username=
+spring.rabbitmq.password=
+spring.rabbitmq.host=
 queue.name=notifications
-spring.mail.host=email-smtp.us-east-2.amazonaws.com
-spring.mail.port=587
-spring.mail.username=AKIASB5S5EGQTLYTXJ2Q
-spring.mail.password=BN9SKfKepIv82uBSwQRmMUAvOEzObJE1s1yWxxL9Ep31
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 # SSL, post 465
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
